Commit-6: CLI requirement covered, README file added